website/versioned_docs/version-2.14.0/hooks/useSuspenseInfiniteQuery.mdx
---
sidebar_label: useSuspenseInfiniteQuery()
---

# useSuspenseInfiniteQuery(...)

The Hook enables you to perform asynchronous data fetching operations with support for infinite scrolling scenarios.
The functionality is similar to the [_useInfiniteQuery_](./useInfiniteQuery.mdx) hook, but with the added benefit
of Suspense support.
For more detailed information, explore [_useSuspenseInfiniteQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseInfiniteQuery) documentation for more details.

```ts
const query = api.<service>.<operation>.useSuspenseInfiniteQuery(
  parameters,
  suspenseInfiniteQueryOptions
)
```

### Arguments

1.  `parameters: { path, query, header } | QueryKey | undefined`
    - **Required only if OpenAPI specification defines required parameters**
    - If the operation has no required parameters according to OpenAPI, you can omit this argument
    - `parameters` will be used to generate the `QueryKey`
    - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
      which is also strictly-typed ✨
    - If operation does not require parameters, you must pass an empty object `{}` for strictness

2.  `suspenseInfiniteQueryOptions?: UseSuspenseInfiniteQueryOptions`
    - **Optional**, represents the options of the
      [_useSuspenseInfiniteQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseInfiniteQuery)
      Hook
      - `queryOptions.queryFn` could be provided to override the default `queryFn` used by Qraft

### Returns

Same object as `UseInfiniteQueryResult` object, except that:

- `data` is guaranteed to be defined
- `isPlaceholderData` is missing
- `status` is always success
  - the derived flags are set accordingly.

See the TanStack [_useSuspenseInfiniteQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseInfiniteQuery#:~:text=placeholderData-,Returns,-Same%20object%20as)
documentation for more details.

:::tip
By default, `useSuspenseInfiniteQuery` hooks are only generated for read operations (_GET_ method). If you want to use query
hooks for write operations (_POST_, _PUT_, _PATCH_ methods), use the `--queryable-write-operations` CLI option
during code generation.
:::

### Examples

```tsx title="src/PostList.tsx"
import { Suspense } from 'react';
import { createAPIClient } from './api'; // generated by OpenAPI Qraft CLI

import { requestFn } from '@openapi-qraft/react';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';

const queryClient = new QueryClient();

const api = createAPIClient({
  requestFn,
  queryClient,
  baseUrl: 'https://api.sandbox.monite.com/v1',
});

function PostList() {
  /**
   * `api.posts.getPosts.useSuspenseInfiniteQuery(...)` launches the initial fetch operation:
   * ###
   * GET /posts?limit=10&page=1
   */
  const infiniteQuery = api.posts.getPosts.useSuspenseInfiniteQuery(
    { query: { limit: 10 } },
    {
      getNextPageParam: (lastPage, allPages, lastPageParams) => {
        if (lastPage.length < 10) return; // if less than 10 items, there are no more pages
        return {
          query: {
            page: Number(lastPageParams.query?.page) + 1,
          },
        };
      },
      initialPageParam: {
        query: {
          page: 1, // will be used in initial request
        },
      },
    }
  );

  return (
    <div>
      {infiniteQuery.data.pages.map((page, pageIndex) => (
        <ul key={pageIndex}>
          {page.map((post) => (
            <li key={post.id}>{post.title}</li>
          ))}
        </ul>
      ))}
      <button onClick={() => {
        // ⬇︎ Initiates a GET request: GET /posts?limit=10&page=2
        infiniteQuery.fetchNextPage()
      }}>
        Load More
      </button>
    </div>
  );
}

export default function() {
  return (
    <QueryClientProvider client={queryClient}>
      <Suspense fallback={<div>Loading...</div>}>
        <PostList />
      </Suspense>
    </QueryClientProvider>
  );
}
```
